Fix unnecesserily large z-index values

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -65,7 +65,7 @@ body {
 
 
 .fade-in {
-    z-index: 100000000;
+    z-index: 10000;
     background: black;
     overflow: hidden;
     /* animation: fade 0.75s ease-out 0.25s forwards; */
@@ -101,7 +101,7 @@ header {
     background-color: rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(5px);
     height: var(--nav-height);
-    z-index: 621621621;
+    z-index: 9000;
     pointer-events: none;
 
 }
@@ -516,7 +516,7 @@ a {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: white;
     /* outline: 2px solid white; */
-    z-index: 100000;
+    z-index: 10000;
 
     /* background-blend-mode: screen; */
     /* color: transparent; */
@@ -587,7 +587,7 @@ a {
     left: 50%;
     translate: -50% -50%;
     box-shadow: 0 0 0 3px #ffffff33;
-    z-index: 621000;
+    z-index: 20000;
     display: grid;
     place-content: center;
 
